besu/ingress/k8s-backups/20250702-122601/middlewares-backup.yaml
apiVersion: v1
items:
- apiVersion: traefik.io/v1alpha1
  kind: Middleware
  metadata:
    annotations:
      kubectl.kubernetes.io/last-applied-configuration: |
        {"apiVersion":"traefik.io/v1alpha1","kind":"Middleware","metadata":{"annotations":{},"name":"basic-auth","namespace":"paladin"},"spec":{"basicAuth":{"secret":"basic-auth-secret"}}}
    creationTimestamp: "2025-07-01T01:25:45Z"
    generation: 1
    name: basic-auth
    namespace: paladin
    resourceVersion: "37166534"
    uid: 0a6e7c21-dc72-4134-a96c-91a982067a55
  spec:
    basicAuth:
      secret: basic-auth-secret
- apiVersion: traefik.io/v1alpha1
  kind: Middleware
  metadata:
    annotations:
      kubectl.kubernetes.io/last-applied-configuration: |
        {"apiVersion":"traefik.io/v1alpha1","kind":"Middleware","metadata":{"annotations":{},"name":"besu-retry-middleware","namespace":"paladin"},"spec":{"retry":{"attempts":3,"initialInterval":"500ms"}}}
    creationTimestamp: "2025-07-01T01:39:19Z"
    generation: 1
    name: besu-retry-middleware
    namespace: paladin
    resourceVersion: "37173210"
    uid: 29e57bbb-465f-40f9-9991-9eae6ea64564
  spec:
    retry:
      attempts: 3
      initialInterval: 500ms
- apiVersion: traefik.io/v1alpha1
  kind: Middleware
  metadata:
    annotations:
      kubectl.kubernetes.io/last-applied-configuration: |
        {"apiVersion":"traefik.io/v1alpha1","kind":"Middleware","metadata":{"annotations":{},"name":"besu-ws-middleware","namespace":"paladin"},"spec":{"headers":{"customRequestHeaders":{"Connection":"Upgrade","Upgrade":"websocket"}}}}
    creationTimestamp: "2025-07-01T01:39:19Z"
    generation: 1
    name: besu-ws-middleware
    namespace: paladin
    resourceVersion: "37173206"
    uid: af1dc813-2d48-4d31-9b9f-3214929c0fd7
  spec:
    headers:
      customRequestHeaders:
        Connection: Upgrade
        Upgrade: websocket
kind: List
metadata:
  resourceVersion: ""
